--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@status) do |f| %>
+<%= simple_form_for(@status) do |f| %>
   <% if @status.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
@@ -15,7 +15,10 @@
     <%= f.label :content %><br>
     <%= f.text_field :content %>
   </div>
+  <%= f.file_field :status_image %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
+
 <% end %>
