--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -9,3 +9,4 @@
 
 <%= link_to 'Edit', edit_status_path(@status) %> |
 <%= link_to 'Back', statuses_path %>
+<%= button_to 'Add view', add_view_status_path, method: :post %>
