lalala  carrier wave working!

--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :content %><br>
     <%= f.text_field :content %>
   </div>
-  <%= f.file_field :status_image %>
+  <%= f.file_field :status_picture %>
 
   <div class="actions">
     <%= f.submit %>
