--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -5,7 +5,7 @@
   <strong>Content:</strong>
   <%= @status.content %>
 </p>
-<%= image_tag @status.status_image.url %>
+<%= image_tag @status.status_picture.url %>
 
 <%= link_to 'Edit', edit_status_path(@status) %> |
 <%= link_to 'Back', statuses_path %>
